--- a/src/main.html
+++ b/src/main.html
@@ -11,9 +11,11 @@
 
     <button id="create-offer">Create Offer</button>
     <textarea id="offer-sdp" placeholder="Paste Offer SDP here"></textarea>
+    <button id="copy-offer-sdp">Copy Offer SDP</button>
 
     <button id="create-answer">Create Answer</button>
     <textarea id="answer-sdp" placeholder="Paste Answer SDP here"></textarea>
+    <button id="copy-answer-sdp">Copy Answer SDP</button>
 
     <button id="add-answer">Set Answer</button>
 
